# Red-team-as-API

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: stub-scan.json
src/redteam_api/: main.py
src/redteam_api/adapters/: base.py  generic_http.py  openai_chat.py
src/redteam_api/api/: auth.py  routes.py
src/redteam_api/attacks/: base.py  direct_prompt_injection.py  indirect_prompt_injection.py  jailbreak_persona_switch.py  output_handling.py  system_prompt_extraction.py
src/redteam_api/core/: config.py  models.py  orchestrator.py  storage.py
src/redteam_api/judge/: claude_judge.py  heuristics.py
src/redteam_api/report/: json_export.py  markdown.py
tests/stub_target/: README.md  server.py
